--- a/src/shoppingCart/shoppingCart.css
+++ b/src/shoppingCart/shoppingCart.css
@@ -15,6 +15,10 @@ nav{
     padding: 0 3rem;
     height: 60px;
 }
+nav h1 a{
+    font-size: 2rem;
+    color: #000;
+}
 nav ul{
     display: flex;
     list-style: none;
@@ -22,6 +26,9 @@ nav ul{
 nav ul a{
     padding: 0.5rem;
     margin: 0.5rem;
+}
+nav ul a.active{
+    font-weight: 900;
 }
 
 .products{
@@ -36,6 +43,7 @@ nav ul a{
 .product img{
     width: 100%;
     height: 300px;
+    object-fit: cover;
 }
 .cartCount{
     width: 20px;
@@ -46,4 +54,43 @@ nav ul a{
     border-radius: 50%;
     color: #fff;
     background-color: #000;
+}
+
+.static-page{
+    padding: 3rem;
+}
+.static-page h2{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+.static-page p{
+    line-height: 1.5;
+    padding-bottom: 0.25rem;
+}
+
+.contact form{
+    width: 50vw;
+    max-width: 800px;
+    margin: 0 auto;
+}
+.contact form .form-group{
+    margin-bottom: 2rem;
+}
+.contact form input, .contact form textarea, .contact form button{
+    width: 100%;
+    padding: 1rem 0.5rem;
+    border: 2px solid #343434;
+    border-radius: 0.5rem;
+    transition: all 0.45s ease-in;
+    font-size: 1rem;
+}
+.contact form textarea{
+    min-height: 100px;
+}
+.contact form button{
+    cursor: pointer;
+}
+.contact form button:hover{
+    background-color: #000;
+    color: #fff;
 }
