added cart functionality

--- a/src/shoppingCart/shoppingCart.css
+++ b/src/shoppingCart/shoppingCart.css
@@ -94,3 +94,22 @@ nav ul a.active{
     background-color: #000;
     color: #fff;
 }
+.items{
+    padding: 3rem;
+}
+.items .item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.items .item img{
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+}
+.items .item .left, .items .item .right{
+    width: 25%;
+}
+.items .item .center{
+    width: 50%;
+}
